#901 - Bootstrap supporting (site menu, fixed overflow issue)

--- a/core.apps.layout_columns/styles/layout.css
+++ b/core.apps.layout_columns/styles/layout.css
@@ -16,6 +16,7 @@ html {
 
 
 .layout_cells_container {
+    overflow: auto;
     position: relative;
     zoom: 1;
 }
@@ -26,6 +27,7 @@ html {
         box-sizing: border-box;
         min-height: 20px;
         float: left;
+        overflow: auto;
         position: relative;
     }
 
@@ -43,4 +45,9 @@ html {
 }
 
 .app_content {
+    overflow: hidden;
+}
+
+.menu_priority{
+    z-index:3;
 }
